lib/tests/fixtures/compiler/parser/ineffective_in_class.baseline
Error: ineffective_in_class.pp:2:5: ineffective statements may only appear as the last statement at top-level or inside functions and conditional expressions.
  $a + $b
  ^~~~~~~
