lib/tests/fixtures/compiler/parser/ineffective_in_class.pp
class foo {
    $a + $b
}

include foo
